# project.software-metadata.pub

./: .readthedocs.yaml  CNAME  Makefile  README.md  _config.yml  conf.py  events.md  index.md  presentations.md  pyproject.toml  requirements.txt  resources.md
_layouts/: redirect.html
_static/: custom.css
_templates/: funding.html
_urls/: concept-paper-community-reviews.md  index.md
